구명보트 greedy with ArrayDeque